# rdkit_blog

./: README.md
data/: 1TDU-results.sdf  BLSets_actives.txt  BLSets_actives_target_key.txt  BLSets_selected_actives.txt  BLSets_singleic50_decoys.txt  E7130.mol  S1P1_data.csv  az_overlays.yaml  cdk2_rgd_dataset.csv  chembl27_confgen_tgts.txt  chembl36_very_active.txt  dsgdb9nsd_107313.xyz  dsgdb9nsd_127185.xyz  fragqueries.q.txt  herg.yaml  herg_data.txt  herg_mols_props.csv  jm7b00306.sdf  rgd_chiral.sdf  rgd_symm.sdf  thousand_words.iso.smi  thousand_words.no_iso.smi  thousand_words.pubchem.iso.smi  thousand_words.pubchem.no_iso.smi
notebooks/: 2016_Q1 Preview Drawing Improvements.ipynb  2016_Q1 Preview FilterCatalog.ipynb  2016_Q1 Preview New Reaction Features.ipynb  2018_Q3 New Fingerprint Bit Rendering Code.ipynb  2023_03_New_Stuff.ipynb  2023_09_1_New_Stuff_1.ipynb  2024_New_Stuff.ipynb  2024_New_Stuff_2.ipynb  3D MCS.ipynb  3D structure of a natural product.ipynb  A buried data treasure.ipynb  About Benchmarking Sets II.ipynb  Adding Molecules to Matplotlib.ipynb  Additive fingerprints 2 - alternate fingerprints.ipynb  Additive fingerprints.ipynb  Atom Pair Fingerprints - revisited.ipynb  Atom Pair Fingerprints.ipynb  BRICS tutorial.ipynb  BRICS_Synthons.ipynb  Binary molecules and the cartridge.ipynb  Bits Set By Fingerprint Type.ipynb  Building A Similarity Comparison Set Revisited-2021.ipynb  Building A Similarity Comparison Set Revisited.ipynb  Building A Similarity Comparison Set.ipynb  (+156 more)
src/simple_cxx_example/: CMakeLists.txt  tautomer_hash.cpp
(+32 files in other folders)
